[#1372] Add SERVER_SERVLET_CONTEXT_PATH support
added support for SERVER_SERVLET_CONTEXT_PATH. Could be used in some cases

Signed-off-by: Marinov Avgustin <Avgustin.Marinov@bosch.com>